// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Reducer Should handle CANCEL_EMAIL_CHANGE 1`] = `
Object {
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showLocaleHeader": true,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": Object {
    "newEmailToConfirm": null,
  },
}
`;

exports[`User Reducer Should handle USER_REQUEST_EMAIL_CHANGE 1`] = `
Object {
  "displayChartModal": false,
  "groupAdminUsersUserDeletionFailed": false,
  "groupAdminUsersUserDeletionSuccessful": false,
  "registration_form": Object {
    "bottomText": "",
    "bottomTextDisplayed": false,
    "domains": Array [],
    "hasQuestions": false,
    "questions": Array [],
    "topText": "",
    "topTextDisplayed": false,
  },
  "showLocaleHeader": true,
  "showLoginModal": false,
  "showRegistrationModal": false,
  "user": Object {
    "newEmailToConfirm": "popo@gmail.com",
  },
}
`;
